Bug 127732 - FILESAVE DOCX Hyperlink does not work in Microsoft Word when the target is frame
Summary: FILESAVE DOCX Hyperlink does not work in Microsoft Word when the target is frame
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:6.4.0
Keywords: filter:docx
Depends on:
Blocks: OOXML-Shapes DOCX-Hyperlink
  Show dependency treegraph
 
Reported: 2019-09-24 07:17 UTC by NISZ LibreOffice Team
Modified: 2019-09-30 12:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example ODT file from Writer. (8.81 KB, application/binary)
2019-09-24 07:17 UTC, NISZ LibreOffice Team
Details
The original file saved as DOCX. (14.31 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-09-24 07:18 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-09-24 07:17:11 UTC
Description:
Hyperlink with internal frame target in DOCX documents created with Writer is broken when the document is opened in Word.

Steps to Reproduce:
    1. Create a document in LibreOffice.
    2. Insert a page break.
    3. Choose Insert→Frame→Frame Interactively
    4. Type text.
    5. Click on the first page.
    6. Insert a hyperlink and set the frame as the target of the hyperlink.
    7. Save the document in DOCX format.
    8. Open the file with Microsoft Word.
    9. Notice, that the hyperlink does not work.

Actual Results:
The hyperlink doesn’t work.

Expected Results:
The hyperlink should work in Word.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 632ee9aae6d5f3cf08b6d6b2789310c20db713b7
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-09-24 07:17:56 UTC
Created attachment 154400 [details]
Example ODT file from Writer.
Comment 2 NISZ LibreOffice Team 2019-09-24 07:18:15 UTC
Created attachment 154401 [details]
The original file saved as DOCX.
Comment 3 Xisco Faulí 2019-09-24 10:59:44 UTC
Reproduced in

Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: a283627036c9b1c56e4b765866b8fb8a26ec87ab
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 4 Commit Notification 2019-09-30 11:00:24 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a0f46953883aadab1ae7cae5641d3fc1a6089f81

tdf#127732 DOCX export: fix internal hyperlinks to frame target

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.