tdf#127732 DOCX export: fix internal hyperlinks to frame target

Hyperlinks to internal frame targets didn't work in Word.

Change-Id: Ia402bbdd2e77d8d3bb68ed2ed3a6bde1a913617c
Reviewed-on: https://gerrit.libreoffice.org/79448
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>